--- a/v2.1/使用说明.md
+++ b/v2.1/使用说明.md
@@ -15,3 +15,7 @@
 这次更新采用了在线安装的安装包，终于可以摆脱1.72GB的恐怖了！<br>
 如果您此前没有安装过Slope v2.0，那么需要联网下载matlab运行环境（约2GB）；如果您已经安装过，请不要卸载旧版本，直接安装新版本即可。<br>
 受github限制，单个文件大小不得超过25MB，因此打成了两个分卷压缩包。<br>
+如果在线安装包不能安装，你可以尝试离线安装。离线安装包很大（1.7G左右），我只能使用度盘：<br>
+链接：https://pan.baidu.com/s/1SOxnqXZQyOumSviV4PJfRw <br>
+提取码：Toki<br>
+*我知道在github上放度盘链接挺奥利给的，但没辙。
