--- a/v2.1/使用说明.md
+++ b/v2.1/使用说明.md
@@ -18,4 +18,6 @@
 如果在线安装包不能安装，你可以尝试离线安装。离线安装包很大（1.7G左右），我只能使用度盘：<br>
 链接：https://pan.baidu.com/s/1SOxnqXZQyOumSviV4PJfRw <br>
 提取码：Toki<br>
-*我知道在github上放度盘链接挺奥利给的，但没辙。
+*我知道在github上放度盘链接挺奥利给的，但没辙。*
+<br><br>
+如果你的电脑上已经安装了matlab，那么你可以用更简单的方式：直接下载源代码，然后运行Test0.m这个函数。
