--- a/v2.1/使用说明.md
+++ b/v2.1/使用说明.md
@@ -21,3 +21,16 @@
 *我知道在github上放度盘链接挺奥利给的，但没辙。*
 <br><br>
 如果你的电脑上已经安装了matlab，那么你可以用更简单的方式：直接下载源代码，然后运行Test0.m这个函数。
+
+图片的尺寸（长宽像素数量）只能是128的整数倍，其他尺寸的图可以调整颜色，但不能导出为立体的。<br>
+<br>
+图片尺寸请用画图、ps等任何图像编辑软件调整到128的整数倍像素。<br>
+<br>
+调整完图片尺寸之后，使用方法很简单，有手就行。<br>
+<br>
+导出的文件是minecraft数据包的函数，需要放在任何一个数据包里用/function命令运行。运行完之后圈投影就行了。<br>
+现在还不了解投影文件和.schematic文件的编码方式，所以暂且做不到导出投影文件。<br>
+<br>
+注意地图画的尺寸比地图的大小多一行，是129×128个方块（更大尺寸的地图画类似）。在地图画内容的北侧边界（z-方向）还有一溜石头，粘贴投影的时候请注意不要让石头出现在地图范围内。<br>
+<br>
+当然如果你是强迫症想去掉这一溜石头也行，影响不大。<br>
