--- a/使用说明.md
+++ b/使用说明.md
@@ -1,22 +1,29 @@
-#v1.0：第一个可以凑活着用的版本<br>
-##使用方法：<br>
-1.使用第三方的地图画生成器（如mc-map.djfun.de）生成出地图文件map_i.dat。<br>
-2.然后用winrar或者其他解压软件直接将它解压（地图文件是gzip压缩的），得到map_i这样一个没用后缀名的文件。<br>
-3.启动ReadUnpacked.exe，输入map_i（也就是解压后的文件名），它会提取出Base.txt和Depth.txt，分别是地图的基色矩阵和阴影矩阵。<br>
-4.打开matlab，将所有matlab函数移动到\matlab\bin文件夹下（也可以自己创建一个子文件夹），确保这些函数已经被matlab添加到路径中。后面的操作都在matlab中进行。<br>
-5.分别复制两个txt的全部内容，粘贴在matlab的命令行窗口中，按enter执行。这样就导入了两个128×128的矩阵，分别为Base和Depth。<br>
-6.输入你要生成的mcfuntion的路径，比如：Path='D:\游戏\Minecraft\test.mcfunction'。最好将它存成一个字符串或者字符向量。<br>
-7.选好导出所用的Mode（其实是方块列表），输入Mode="Survival_Better"按回车。模式的值可以是"Custom"（传统，适于创造模式）"Survival_Cheaper"（适于生存前期，比较便宜）"Survival_Better"（适于生存后期）"InstBreak"（尽量选择可瞬间破坏的方块）和"Replace"（替换一部分传统方块列表）。不建议使用"Replace"，它还不太完善。我最推荐使用"Survival_Better"。<br>
-8.设定地图画的西北角坐标。如果你不了解地图网格，那就输入Pos=[-64,5,-64]。注意坐标的顺序是xyz，Pos应当是行向量。<br>
-9.调用EzExport函数。输入EzExport(Base,Depth,Path,Mode,Pos,0)并等待一小会。如果返回一个大于等于16512的数字，说明mcfunction生成成功了。这个数字就是mcfuntion包含的命令数。<br>
-10.关闭matlab，将生成的mcfunction移动到存档的数据包中。<br>
-11.打开matlab，进入存档，使用/reload命令，再使用/function命令调用刚刚生成的函数。<br>
+Slope v2.0是第一个比较容易操作的软件，它终于不再是一堆函数，而是一个安装包。安装之后可以流畅运行的安装包。
+我会的语言很少，编写gui只会用matlab。所以这个软件安装的时候是自带matlab运行环境的，文件比较大，启动比较慢，安装也比较慢，请耐心等待。<br>
+<br>
+现在这个版本只支持128×128像素的图片，其他尺寸的图可以调整大小，但不能导出为立体的。<br>
+（因为现在还没解决立体像素画超出限高的问题，所以限制了大小，以后会放开的。）<br>
+<br>
+图片尺寸请用画图、ps等任何图像编辑软件调整到128*128像素。<br>
+<br>
+调整完图片尺寸之后，使用方法很简单，有手就行。<br>
+<br>
+导出的文件是minecraft数据包的函数，需要放在任何一个数据包里用/function命令运行。运行完之后圈投影就行了。<br>
+现在还不了解投影文件和.schematic文件的编码方式，所以暂且做不到导出投影文件。<br>
+<br>
+注意地图画的尺寸比地图的大小多一行，是129*128个方块。在地图画内容的北侧边界（z-方向）还有一溜石头，粘贴投影的时候请注意不要让石头出现在地图范围内。<br>
+<br>
+当然如果你是强迫症想去掉这一溜石头也行，影响不大。<br>
+<br>
+如果你安装了matlab，你可以直接下载源代码中的所有文件，然后移动到\matlab\bin\这个文件夹中，并全部添加至路径，然后运行GUI\Test0.m这个函数，同样可以弹出和应用程序一样的窗口。<br>
 <br>
 <br>
-#包含的文件：<br>
-1.ReadUnpacked：一个c艹的应用程序，它的用途是提取解压后的地图文件。地图文件都是gzip压缩的，我非常菜搞不懂gzip，所以要先使用winrar或者bandzip手动解压地图文件，得到的文件应该是去掉了.dat后缀的map_i文件。使用ReadUnpacked.exe处理这个文件，得到2个txt，它们就是进行下一步所需的参数。<br>
-2.EzExport：方便你生成地图画的函数。它调用了GetHeight.m和MapExport.m这两个函数。<br>
-3.GetHeight：将Depth矩阵表示的相对高度转换为Height矩阵的绝对高度，并将水专门列出，特殊处理。<br>
-4.MapExport：最终生成mcfuntion的函数。它内置了几种方块列表可供选择。<br>
-5.DrawMap：预览将要生成的地图画。<br>
-6.MLGHelp：一个提供帮助用的函数。还不是太完善但也可以凑合用。<br>
+
+安装包太大，无法上传到github，所以只能用度盘：<br>
+
+链接：https://pan.baidu.com/s/1HQFJWblRtrJDjv5YR-xfUg <br>
+
+提取码：Toki <br>
+
+<br>
+最后，这个版本还是有一些bug：预览的地图和实际生成的地图有差别，目前还没修复。还有就是mc地图对水的渲染方式比我以为的更复杂，大面积水的渲染效果会有差异，少量的、单个水柱能正常显示。<br>
