--- a/使用说明.md
+++ b/使用说明.md
@@ -1,29 +1,36 @@
-Slope v2.0是第一个比较容易操作的软件，它终于不再是一堆函数，而是一个安装包。安装之后可以流畅运行的安装包。
-我会的语言很少，编写gui只会用matlab。所以这个软件安装的时候是自带matlab运行环境的，文件比较大，启动比较慢，安装也比较慢，请耐心等待。<br>
+#Slope v2.1 更新内容：<br>
+修复bug：<br>
+修复了地图颜色错位的bug<br>
+修复了启动时会额外弹出一个空白窗口的bug<br>
+修复了水柱不能显示第三个阴影的bug<br>
+修复了单个mcfuntion超过65536条命令的bug：现在会将多出来的命令放在形如“functionname_2.mcfunction”的函数文件里了<br>
+变动：<br>
+增加了平板地图画模式<br>
+删除了CMY颜色空间，因为实际效果与rgb完全一样<br>
+解除了只能生成1×1地图画的限制，现在你可以生成更高清晰度的地图画了！<br>
 <br>
-现在这个版本只支持128×128像素的图片，其他尺寸的图可以调整大小，但不能导出为立体的。<br>
-（因为现在还没解决立体像素画超出限高的问题，所以限制了大小，以后会放开的。）<br>
+加入了地图可能超过限高的bug：本次更新解除了地图尺寸限制，但更大的地图可能会有更大的总高度，如果总高度很不幸的超过了256，那么这样的地图画就无法实装。
+我有压缩高度的方案，但现在还不成熟，需要继续重构。<br>
 <br>
-图片尺寸请用画图、ps等任何图像编辑软件调整到128*128像素。<br>
+这次更新采用了在线安装的安装包，终于可以摆脱1.72GB的恐怖了！<br>
+如果您此前没有安装过Slope v2.0，那么需要联网下载matlab运行环境（约2GB）；如果您已经安装过，请不要卸载旧版本，直接安装新版本即可。<br>
+受github限制，单个文件大小不得超过25MB，因此打成了两个分卷压缩包。<br>
+如果在线安装包不能安装，你可以尝试离线安装。离线安装包很大（1.7G左右），我只能使用度盘：<br>
+链接：https://pan.baidu.com/s/1SOxnqXZQyOumSviV4PJfRw <br>
+提取码：Toki<br>
+*我知道在github上放度盘链接挺奥利给的，但没辙。*
+<br><br>
+如果你的电脑上已经安装了matlab，那么你可以用更简单的方式：直接下载源代码，然后运行Test0.m这个函数。
+
+图片的尺寸（长宽像素数量）只能是128的整数倍，其他尺寸的图可以调整颜色，但不能导出为立体的。<br>
+<br>
+图片尺寸请用画图、ps等任何图像编辑软件调整到128的整数倍像素。<br>
 <br>
 调整完图片尺寸之后，使用方法很简单，有手就行。<br>
 <br>
 导出的文件是minecraft数据包的函数，需要放在任何一个数据包里用/function命令运行。运行完之后圈投影就行了。<br>
 现在还不了解投影文件和.schematic文件的编码方式，所以暂且做不到导出投影文件。<br>
 <br>
-注意地图画的尺寸比地图的大小多一行，是129*128个方块。在地图画内容的北侧边界（z-方向）还有一溜石头，粘贴投影的时候请注意不要让石头出现在地图范围内。<br>
+注意地图画的尺寸比地图的大小多一行，是129×128个方块（更大尺寸的地图画类似）。在地图画内容的北侧边界（z-方向）还有一溜石头，粘贴投影的时候请注意不要让石头出现在地图范围内。<br>
 <br>
 当然如果你是强迫症想去掉这一溜石头也行，影响不大。<br>
-<br>
-如果你安装了matlab，你可以直接下载源代码中的所有文件，然后移动到\matlab\bin\这个文件夹中，并全部添加至路径，然后运行GUI\Test0.m这个函数，同样可以弹出和应用程序一样的窗口。<br>
-<br>
-<br>
-
-安装包太大，无法上传到github，所以只能用度盘：<br>
-
-链接：https://pan.baidu.com/s/1HQFJWblRtrJDjv5YR-xfUg <br>
-
-提取码：Toki <br>
-
-<br>
-最后，这个版本还是有一些bug：预览的地图和实际生成的地图有差别，目前还没修复。还有就是mc地图对水的渲染方式比我以为的更复杂，大面积水的渲染效果会有差异，少量的、单个水柱能正常显示。<br>
